# tesla-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: agentgen.rs  api.rs  auth.rs  config.rs  crypto.rs  main.rs  setup.rs
src/vcp/: commands.rs  metadata.rs  mod.rs  proto.rs
