[package]
name = "tescmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tescmd"
path = "src/main.rs"

[dependencies]
clap     = { version = "4",    features = ["derive", "env"] }
tokio    = { version = "1",    features = ["full"] }
reqwest  = { version = "0.12", features = ["json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
toml     = "0.8"
anyhow   = "1"
dirs     = "5"
open     = "5"
base64   = "0.22"
urlencoding = "2"
rand     = "0.8"
sha1     = "0.10"
sha2     = "0.10"
hmac     = "0.12"
p256     = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8", "pem", "std"] }
zeroize  = "1"
